# changewall

./: Cargo.toml  README.md
default-templates/: README.md  colors-kitty.conf  colors-nqq.css  colors-rofi-dark.rasi  colors-rofi-light.rasi
src/: cache.rs  colordict.rs  colors.rs  export.rs  file.rs  image.rs  main.rs  preview.rs  reload.rs  seq.rs  tests.rs  timechange.rs  traitdef.rs
src/colors/: colordict.rs  colorthief.rs  convert.rs  imagemagick.rs
src/colors/imagemagick/: traitdef.rs
src/export/: traitdef.rs
src/reload/: hooks.rs  seq.rs
src/reload/seq/: traitdef.rs
src/timechange/: traitdef.rs
