[package]
name = "changewal"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
notify-rust = { version = "~4.6", default-features = false, features = ["d"]}
rand = "~0.8"
hex = "~0.4"
home = "~0.5"
tree_magic_mini = { version = "~3.0" }
palette = "~0.6"
clap = "~4.0"
toml = "~0.5"
serde = { version = "~1.0", features = ["derive"]}
anyhow = "~1.0"
aho-corasick = "~0.7"
ryu = "~1.0"

color-thief = { version = "~0.2", optional = true }
image = { version = "~0.24", optional = true }
#time = { version = "~0.3", optional = true, features = ["local-offset", "macros"]}
#sunrise = { version = "~1.0", optional = true }

[features]
default = []
colorthief = ["color-thief", "image"]
#TODO: FIX
#timechange = ["time", "sunrise"]
