[package]
name = "changewal"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
magick_rust = { git = "https://github.com/nlfiedler/magick-rust.git" }
#magick_rust = "~1.0"
notify-rust = { version = "~4.11", default-features = false, features = ["d"]}
fastrand = "~2.2"
hex = "~0.4"
home = "~0.5"
tree_magic_mini = "~3.1"
palette = { features = ["std"], default-features = false, version = "~0.7" }
clap = "~4.5"
toml = "~0.8"
serde = { version = "~1.0", features = ["derive"]}
anyhow = "~1.0"
aho-corasick = "~1.1"

color-thief = { version = "~0.2", optional = true }
image = { version = "~0.25", optional = true }
#time = { version = "~0.3", optional = true, features = ["local-offset", "macros"]}
#sunrise = { version = "~1.0", optional = true }

[features]
default = []
#This is pretty much just unfinished and also not updated
#colorthief = ["color-thief", "image"]
#TODO: FIX
#timechange = ["time", "sunrise"]
